--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>demom</title>
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_853684_xg9wihaj77.css">
     <style>
       *{margin:0;padding:0;list-style:none;}
     </style>
@@ -11,6 +12,7 @@
   <body>
     <div id="app"></div>
     <script src="./static/responsive.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
